modified the footer to include admission req.

--- a/services.html
+++ b/services.html
@@ -523,7 +523,16 @@
         <div class="col-lg-3 col-md-3 col-sm-6 col-12">
           <div class="_kl_de_w">
             <h3>HEROS COLLEGE</h3>
-            <p>Scaling The Heights of Intelligence.</p>
+            <p>P.O BOX 486-90300,</p>
+            <p>Wote-Makueni</p>
+            
+          </div>
+          <div class="_kl_de_w">
+            <h3>Admission Requiremens</h3>
+            <p>Registration Fee @ ksh.1,500</p>
+            <p>Two Passports</p>
+            <p>Birth cert/ID</p>
+            <p>Academic Certificate</p>
           </div>
         </div>
 
