--- a/about-us.html
+++ b/about-us.html
@@ -346,7 +346,10 @@
               <img src="assets/images/director-3.jpg" />
             </div>
             <div class="_Ol_er_qw yu">
-              <img src="assets/images/ICT-guy.jpg" />
+              <img src="assets/images/staff.jpg" />
+            </div>
+            <div class="_Ol_er_qw yu">
+              <img src="assets/images/ICT-Computer.jpeg" />
             </div>
           </div>
         </div>
@@ -808,7 +811,7 @@
               <div class="item">
                 <div class="team-card">
                   <div class="image-team">
-                    <img src="assets/images/profile.jpg" />
+                    <img src="assets/images/staff.jpg" />
                   </div>
                   <div class="team-content">
                     <h3>Williams</h3>
@@ -877,7 +880,7 @@
             </div>
           </div>
   
-          <div class="col-lg-3 col-md-3 col-sm-6 col-12">
+          <div class="col-lg-3 col-md-3 col-sm-6 col-12" onclick="document.location='contact-us.html'">
             <div class="_kl_de_w">
               <h3>Contact Us</h3>
               <form class="my-form">
