--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <section id="carouselExampleFade" class="carousel slide carousel-fade slider" data-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="assets/images/director-5.jpg" class="d-block" alt="..." style="" />
+        <img src="assets/images/slider/1.jpg" class="d-block" alt="..." />
         <div class="carousel-caption">
           <h2>WELCOME TO HERO'S COLLEGE</h2>
           <p>
@@ -63,7 +63,7 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="assets/images/staff.jpg" class="d-block" alt="..." />
+        <img src="assets/images/slider/2.jpg" class="d-block" alt="..." />
         <div class="carousel-caption">
           <h2>Best Education For Diploma</h2>
           <p>
@@ -79,7 +79,7 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="assets/images/director-6.jpg" class="d-block" alt="..." />
+        <img src="assets/images/slider/3.jpg" class="d-block" alt="..." />
         <div class="carousel-caption">
           <h2>MODES OF STUDIES</h2>
           <p>
@@ -667,7 +667,7 @@
           </div>
         </div>
 
-        <div class="col-lg-3 col-md-3 col-sm-6 col-12">
+        <div class="col-lg-3 col-md-3 col-sm-6 col-12" onclick="document.location='contact-us.html'">
           <div class="_kl_de_w">
             <h3>Contact Us</h3>
             <form class="my-form">
