--- a/services.html
+++ b/services.html
@@ -564,7 +564,7 @@
           </div>
         </div>
 
-        <div class="col-lg-3 col-md-3 col-sm-6 col-12">
+        <div class="col-lg-3 col-md-3 col-sm-6 col-12" onclick="document.location='contact-us.html'">
           <div class="_kl_de_w">
             <h3>Contact Us</h3>
             <form class="my-form">
