updated mobile number in the contact-us page

--- a/contact-us.html
+++ b/contact-us.html
@@ -98,7 +98,7 @@
                       <li>
                         <i class="fas fa-mobile-alt"></i>
                         <h3>Phone</h3>
-                        <strong> 193 716 / O754 633 314</strong>
+                        <strong> 0706 193 716 / O754 633 314</strong>
                       </li>
                     </ol>
                   </div>
